src/app.css
@import 'tailwindcss';
@plugin "daisyui";

@layer utilities {
  /* :root {
  --foreground-rgb: 0, 0, 0;
  --background-start-rgb: 214, 219, 220;
  --background-end-rgb: 255, 255, 255;
} */

  /* @media (prefers-color-scheme: dark) { */
  :root {
    --foreground-rgb: 255, 255, 255;
    --background-start-rgb: 0, 0, 0;
    --background-end-rgb: 0, 0, 0;
  }

  /* } */

  body {
    color: rgb(var(--foreground-rgb));
    background: linear-gradient(to bottom,
        transparent,
        rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb));

    min-height: 100vh;
  }
}

@layer base {

  input[type="number"]::-webkit-inner-spin-button,
  input[type="number"]::-webkit-outer-spin-button {
    -webkit-appearance: none;
    margin: 0;
  }
}

.modal>.modal-box {
  scale: 0.1;
  transition: all 0.2s ease;
}

.modal.modal-active>.modal-box {
  scale: 1;
  transition: all 0.2s ease;
}

